# input_ps4

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  OpenOrbis-tc.cmake  README.md  package.bat  package.sh
.github/workflows/: build.yml
input/: CMakeLists.txt  build.bat  controller.cpp  controller.h  graphics.cpp  graphics.h  log.h  main.cpp  png.cpp  png.h
padpatch/: funcs.h  types.h
